--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/reversedpeach/cocktail-diy#readme",
   "dependencies": {
+    "@appbaseio/reactivesearch": "^3.40.2",
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-search-field": "^2.0.1",
+    "react-select": "^5.4.0",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
@@ -29,8 +34,10 @@
     "babel-jest": "^29.1.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "css-loader": "^6.7.1",
     "jest": "^29.1.1",
     "react-test-renderer": "^18.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
