--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   "homepage": "https://github.com/reversedpeach/cocktail-diy#readme",
   "dependencies": {
     "@appbaseio/reactivesearch": "^3.40.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.7",
+    "context": "^3.0.4",
     "file-loader": "^6.2.0",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-search-field": "^2.0.1",
     "react-select": "^5.4.0",
     "url-loader": "^4.1.1"
