--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "babel-jest": "^29.1.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "jest": "^29.1.1",
+    "react-router-dom": "^6.4.1",
     "react-test-renderer": "^18.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
