--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
