--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
-{"presets": ["@babel/preset-react"],
-"env": {
-    "test": {
-        "plugins": ["babel-plugin-transform-es2015-modules-commonjs"] 
+{
+    "presets": ["@babel/preset-react"],
+    "env": {
+        "test": {
+            "plugins": ["babel-plugin-transform-es2015-modules-commonjs"]
         }
     }
 }
