--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
+    "react-router-dom": "^6.4.2",
     "react-select": "^5.5.0"
   },
   "devDependencies": {
