--- a/client/package.json
+++ b/client/package.json
@@ -28,10 +28,13 @@
     "file-loader": "^6.2.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.4.2",
-    "react-select": "^5.5.0"
+    "react-select": "^5.5.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
