--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "server",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "tsc",
+    "start": "npm run compile && node ./dist/start.js",
     "start:dev": "nodemon"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
-    "mongodb": "^4.10.0",
+    "@apollo/datasource-rest": "^4.3.2",
+    "@apollo/server": "^4.0.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^18.11.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
