--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.4.2",
     "react-select": "^5.5.0",
+    "style-component": "^0.0.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
