fixed create, styled, remove ing

--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.9",
+    "@mui/material": "^5.10.10",
     "context": "^3.0.4",
     "file-loader": "^6.2.0",
     "graphql": "^16.6.0",
@@ -33,6 +33,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
+    "react-icons": "^4.6.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.4.2",
     "react-select": "^5.5.0",
