--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.6.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.4.2",
     "react-select": "^5.5.0",
     "style-component": "^0.0.1",
